@@ -1,3 +1,8 @@
+2010-03-18  Michael Matz  <matz@suse.de>
+
+	PR middle-end/43419
+	* gcc.dg/pr43419.c: New testcase.
+
 2010-03-18  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR rtl-optimization/43360
@@ -16,10 +21,10 @@
 2010-03-17  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
 
 	PR libfortran/43265
-	*gfortran.dg/read_empty_file.f: New test.
-	*gfortran.dg/read_eof_all.f90: New test.
-	*gfortran.dg/namelist_27.f90: Eliminate infinite loop posibility.
-	*gfortran.dg/namelist_28.f90: Eliminate infinite loop posibility.
+	* gfortran.dg/read_empty_file.f: New test.
+	* gfortran.dg/read_eof_all.f90: New test.
+	* gfortran.dg/namelist_27.f90: Eliminate infinite loop posibility.
+	* gfortran.dg/namelist_28.f90: Eliminate infinite loop posibility.
 
 2010-03-17  Michael Matz  <matz@suse.de>
 
